fix modal design bug on mobile devices

--- a/src/Components/Common/Modal/Modal.scss
+++ b/src/Components/Common/Modal/Modal.scss
@@ -6,7 +6,7 @@
   position: absolute;
   top: 0;
   width: 100%;
-  height: 100%;
+  height: calc(100% + 30px);
   background-color: rgba(0, 0, 0, 0.75);
   &__container {
     display: flex;
